force-app/main/default/objects/Onboarding_Project__c/Onboarding_Project__c.object-meta.xml
<CustomObject>
    <label>Onboarding Project</label>
    <nameField>
        <displayFormat>OP-{000000}</displayFormat>
        <label>Onboarding Project Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>