force-app/main/default/objects/Onboarding_Project__c/fields/Initiation_Date__c.field-meta.xml
<CustomField>
    <fullName>Initiation_Date__c</fullName>
    <description>The date work should begin on onboarding this customer.</description>
    <label>Initiation Date</label>
    <type>Date</type>
</CustomField>