force-app/main/default/objects/Onboarding_Project__c/fields/Open_Steps__c.field-meta.xml
<CustomField>
    <fullName>Open_Steps__c</fullName>
    <description>The number of steps that are Planned, In Progress, Waiting on Customer, or On Hold.</description>
    <label>Open Steps</label>
    <summaryFilterItems>
        <field>Onboarding_Project_Step__c.Status__c</field>
        <operation>equals</operation>
        <value>Planned, In Progress, Waiting on Customer, On Hold</value>
    </summaryFilterItems>
    <summaryForeignKey>Onboarding_Project_Step__c.Onboarding_Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>