force-app/main/default/objects/Onboarding_Project__c/fields/Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Date__c</fullName>
    <description>The date that is planned for this onboarding project to be completed.</description>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>