force-app/main/default/objects/Onboarding_Project__c/listViews/Onboarders_Onboarding_Project.listView-meta.xml
<ListView>
    <fullName>Onboarders_Onboarding_Project</fullName>
    <filterScope>Queue</filterScope>
    <label>Onboarders</label>
    <queue>Onboarders</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>